--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -24,14 +24,16 @@ RUN chmod 777 -R .
 # get the repos
 RUN git clone https://github.com/RENCI/APSViz-LoadData.git
 
-RUN git checkout except_test
-
 # move to the install directory
 WORKDIR /repo/APSViz-LoadData
 
 RUN apt-get install -y libgnutls28-dev
+
 # install the pip requirements
 RUN pip install -r requirements.txt
+
+RUN mkdir -p /home/nru/.ssh
+RUN chmod 777 /home/nru/.ssh
 
 # create a new non-root user
 RUN useradd -M -u 1000 nru
