--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2022 Renaissance Computing Institute. All rights reserved.
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-License-Identifier: LicenseRef-RENCI
+# SPDX-License-Identifier: MIT
+
 wget
 GDAL>=2.2.4
 git+https://github.com/RENCI/apsviz-geoserver-rest.git
